--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,8 @@
       "android": {
         "buildType": "apk",
         "gradleCommand": ":app:assembleRelease"
-      }
+      },
+      "channel": "preview"
     },
     "production": {
       "autoIncrement": true
