--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.0.14",
     "@types/react": "~19.1.10",
-    "expo": "^54.0.13",
+    "expo": "~54.0.25",
     "expo-blur": "~15.0.7",
     "expo-checkbox": "~5.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
-    "expo-linking": "~8.0.8",
+    "expo-linking": "~8.0.9",
     "expo-localization": "~17.0.7",
-    "expo-router": "~6.0.12",
-    "expo-splash-screen": "~31.0.10",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
-    "expo-web-browser": "~15.0.8",
+    "expo-updates": "~29.0.13",
+    "expo-web-browser": "~15.0.9",
     "i18next": "^25.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
