--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,14 +40,14 @@ jobs:
   check-description:
     runs-on: ubuntu-latest
     steps:
-      - name: Exit if missing description for stable
+      - name: Exit
         if: ${{ inputs.stable && !inputs.description }}
         run: echo "❌ Missing description for a stable release" && exit 1
 
   check-version-bump:
     runs-on: ubuntu-latest
     steps:
-      - name: Exit if missing version bump for stable
+      - name: Exit
         if: ${{ inputs.stable && !inputs.version-bump }}
         run: echo "❌ Missing version bump for a stable release" && exit 1
 
@@ -55,7 +55,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [check-description, check-version-bump]
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
@@ -99,7 +98,9 @@ jobs:
         id: nightly-version
         if: ${{ !inputs.stable }}
         run: |
-          VERSION="${{ steps.get-latest-tag.outputs.release }}-${{ steps.get-latest-commit.outputs.value }}"
+          RAW="${{steps.get-latest-tag.outputs.release}}-${{steps.get-latest-commit.outputs.value}}"
+          # Remplacer tout caractère non valide par "-"
+          VERSION=$(echo "$RAW" | sed 's/[^A-Za-z0-9.-]/-/g')
           echo "$VERSION" > nightly-version.txt
           echo "value=$VERSION" >> "$GITHUB_OUTPUT"
 
@@ -146,7 +147,6 @@ jobs:
     if: ${{ !inputs.stable }}
     needs: build
     runs-on: ubuntu-latest
-
     steps:
       - name: Clear cache manually
         if: ${{ inputs.reset-cache }}
@@ -160,8 +160,8 @@ jobs:
       - name: Upload Nightly Release
         uses: ncipollo/release-action@v1
         with:
-          tag: nightly-${{ steps.build-name.outputs.value }}
-          name: "Nightly release"
+          tag: nightly-${{ steps.nightly-version.outputs.value }}
+          name: "Nightly release ${{ steps.nightly-version.outputs.value }}"
           draft: ${{ inputs.is-draft }}
           prerelease: true
           body: |
@@ -174,7 +174,6 @@ jobs:
     if: ${{ inputs.stable }}
     needs: build
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
@@ -184,9 +183,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Update package.json & lockfile without tag
           npm version ${{ inputs.version-bump }} --no-git-tag-version
-
           git add package.json package-lock.json
           git commit -m "chore(release): bump version to ${{ steps.version_build.outputs.v-version }}"
           git push
@@ -199,8 +196,8 @@ jobs:
       - name: Upload Stable Release
         uses: ncipollo/release-action@v1
         with:
-          name: MK8DSB ${{ steps.version_build.outputs.v-version }}
           tag: ${{ steps.version_build.outputs.v-version }}
+          name: MK8DSB ${{ steps.version_build.outputs.v-version }}
           body: ${{ inputs.description }}
           draft: ${{ inputs.is-draft }}
           prerelease: false
