--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: Build and release
 
 permissions:
   contents: write
@@ -14,7 +14,10 @@ on:
         type: choice
         description: Version level
         required: false
-        options: [major, minor, patch]
+        options:
+          - major
+          - minor
+          - patch
         default: patch
       reset-cache:
         type: boolean
@@ -27,6 +30,7 @@ on:
       is-draft:
         type: boolean
         description: Draft release ?
+        required: false
         default: false
       description:
         required: false
@@ -36,27 +40,25 @@ env:
   GITHUB_TOKEN: ${{ github.token }}
 
 jobs:
-  # ------- VALIDATION -------
   check-description:
     runs-on: ubuntu-latest
     steps:
       - name: Exit
-        if: ${{ inputs.stable && !inputs.description }}
-        run: echo "❌ Missing description for a stable release" && exit 1
+        if: ${{inputs.stable && !inputs.description}}
+        run: echo "Missing description for a stable release" && exit 1
 
   check-version-bump:
     runs-on: ubuntu-latest
     steps:
       - name: Exit
-        if: ${{ inputs.stable && !inputs.version-bump }}
-        run: echo "❌ Missing version bump for a stable release" && exit 1
+        if: ${{inputs.stable && !inputs.version-bump}}
+        run: echo "Missing version bump for a stable release" && exit 1
 
-  # ------- BUILD PROCESS -------
   build:
     runs-on: ubuntu-latest
     needs: [check-description, check-version-bump]
     steps:
-      - name: Checkout repo
+      - name: Setup repo
         uses: actions/checkout@v5
 
       - name: Setup Node
@@ -72,7 +74,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Get latest tag
         id: get-latest-tag
@@ -83,122 +85,174 @@ jobs:
 
       - name: Calculate next stable version
         id: version_build
-        if: ${{ inputs.stable }}
+        if: ${{inputs.stable}}
         uses: reecetech/version-increment@2024.10.1
         with:
-          scheme: semver
-          increment: ${{ inputs.version-bump }}
+          scheme: "semver"
+          increment: ${{inputs.version-bump}}
           tag_prefix: "v"
 
       - name: Get latest commit hash
         id: get-latest-commit
         run: echo "value=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
 
-      - name: Generate Nightly version
+      - name: Store nightly version
         id: nightly-version
-        if: ${{ !inputs.stable }}
         run: |
-          RAW="${{steps.get-latest-tag.outputs.release}}-${{steps.get-latest-commit.outputs.value}}"
-          # Remplacer tout caractère non valide par "-"
-          VERSION=$(echo "$RAW" | sed 's/[^A-Za-z0-9.-]/-/g')
-          echo "$VERSION" > nightly-version.txt
-          echo "value=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "${{steps.get-latest-tag.outputs.release}}-${{steps.get-latest-commit.outputs.value}}" > nightly-version.txt
+          echo "value=$(cat nightly-version.txt)" >> "$GITHUB_OUTPUT"
 
-      # ---------- UPDATE APP CONFIG ----------
-      - name: Update app.config.ts
-        run: |
-          VERSION=$([[ ${{inputs.stable}} == 'true' ]] && echo "${{ steps.version_build.outputs.v-version }}" || echo "${{ steps.nightly-version.outputs.value }}")
-          sed -i app.config.ts -e "s|{{VERSION}}|$VERSION|g"
+      - name: Update app.config.ts - Nightly
+        if: ${{!inputs.stable}}
+        run: sed -i app.config.ts -e 's|{{VERSION}}|${{ steps.nightly-version.outputs.value }}|g'
 
-      # ---------- CLEAN & BUILD ----------
+      - name: Update app.config.ts - Stable
+        if: ${{inputs.stable}}
+        run: sed -i app.config.ts -e 's|{{VERSION}}|${{ steps.version_build.outputs.v-version }}|g'
+
       - name: Clean Android build
-        if: ${{ inputs.reset-cache }}
+        if: ${{inputs.reset-cache}}
         run: |
           cd android && ./gradlew clean && cd ..
           rm -rf android/app/build
 
-      - name: Build APK (local)
-        if: ${{ !inputs.skip-build }}
-        run: eas build --non-interactive --platform android --profile preview --local
+      - name: Build apk (local)
+        if: ${{!inputs.skip-build}}
+        run: |
+          eas build --non-interactive --platform android --profile preview --local 
+          # 🔐 Stop if build fails
+          || { echo "❌ Build failed, aborting release."; exit 1; }
 
       - name: Store build name
         id: build-name
         run: |
-          VERSION=$([[ ${{inputs.stable}} == 'true' ]] && echo "${{ steps.version_build.outputs.v-version }}" || echo "${{ steps.nightly-version.outputs.value }}")
-          echo "value=mk8dsb_${VERSION}.apk" >> "$GITHUB_OUTPUT"
+          if ${{inputs.stable}}; then
+              VERSION_TAG=${{ steps.version_build.outputs.v-version }}
+              echo "value=mk8dsb_${VERSION_TAG}.apk" >> "$GITHUB_OUTPUT"
+          else
+              VERSION_TAG=${{steps.nightly-version.outputs.value}}
+              echo "value=mk8dsb-nightly_${VERSION_TAG}.apk" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Rename build
-        run: mv build-*.apk ${{ steps.build-name.outputs.value }}
+        run: mv build-*.apk ${{steps.build-name.outputs.value}}
 
       - name: Generate SHA256 checksum
-        run: sha256sum ${{ steps.build-name.outputs.value }} > sha256sum.txt && cat sha256sum.txt
+        run: sha256sum ${{steps.build-name.outputs.value}} > sha256sum.txt && cat sha256sum.txt
 
-      - name: Upload Artifacts
+      # 🔧 Generate changelog (safe mode)
+      - name: Generate changelog
+        id: changelog
+        run: |
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+          if [ -z "$LAST_TAG" ]; then
+            echo "LOG=$(git log --pretty=format:'- %s')" >> "$GITHUB_OUTPUT"
+          else
+            echo "LOG=$(git log $LAST_TAG..HEAD --pretty=format:'- %s')" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Upload application artifacts
         uses: actions/upload-artifact@v4
         with:
           name: artifacts
           path: |
-            ./${{ steps.build-name.outputs.value }}
+            ./${{steps.build-name.outputs.value}}
             ./sha256sum.txt
             ./nightly-version.txt
 
-  # ------- NIGHTLY RELEASE -------
   nightly:
-    if: ${{ !inputs.stable }}
-    needs: build
+    if: ${{!inputs.stable}}
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - name: Clear cache manually
-        if: ${{ inputs.reset-cache }}
+        if: ${{inputs.reset-cache}}
         run: rm -rf ~/.npm ~/.gradle
 
-      - name: Download Artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: artifacts
+          path: ./
 
-      - name: Upload Nightly Release
+      - name: Get app-version
+        id: nightly-version
+        run: echo "value=$(cat nightly-version.txt)" >> "$GITHUB_OUTPUT"
+
+      - name: Upload nightly release
         uses: ncipollo/release-action@v1
         with:
-          tag: nightly-${{ steps.nightly-version.outputs.value }}
-          name: "Nightly release ${{ steps.nightly-version.outputs.value }}"
-          draft: ${{ inputs.is-draft }}
+          GITHUB_TOKEN: ${{github.token}}
+          tag: nightly-${{steps.nightly-version.outputs.value}}
+          name: "Nightly ${{steps.nightly-version.outputs.value}}"
+          draft: ${{inputs.is-draft}}
           prerelease: true
           body: |
-            ⚠️ Unstable release — settings or data may be wiped.
-            ${{ inputs.description }}
-          artifacts: "*.apk,sha256sum.txt"
+            ⚠️ Unstable build (nightly)
+            - Might crash or reset your data
+            - Use with caution
 
-  # ------- STABLE RELEASE -------
+            ${{inputs.description}}
+
+          artifacts: |
+            mk8dsb-nightly_${{steps.nightly-version.outputs.value}}.apk
+            sha256sum.txt
+
   release:
-    if: ${{ inputs.stable }}
-    needs: build
+    if: ${{inputs.stable}}
+    needs: [check-description, check-version-bump, build]
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Setup github
         uses: actions/checkout@v5
 
-      - name: Increment version & commit
+      - name: Increment version
+        uses: reecetech/version-increment@2024.10.1
+        id: version
+        with:
+          scheme: "semver"
+          increment: ${{inputs.version-bump}}
+          tag_prefix: "v"
+
+      # 🔧 Validate tag format to avoid invalid tag releases
+      - name: Validate version tag format
+        run: |
+          [[ "${{steps.version.outputs.v-version}}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] \
+          || { echo "❌ Invalid semantic version tag"; exit 1; }
+
+      - name: Bump package.json and create commit
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          npm version ${{ inputs.version-bump }} --no-git-tag-version
-          git add package.json package-lock.json
-          git commit -m "chore(release): bump version to ${{ steps.version_build.outputs.v-version }}"
+          npm version ${{inputs.version-bump}} --no-git-tag-version 
+
+          git add package.json
+          git commit -m "CI: bump version to ${{steps.version.outputs.v-version}}"
           git push
 
-      - name: Download Artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: artifacts
+          path: ./
 
-      - name: Upload Stable Release
+      - name: Upload stable release
         uses: ncipollo/release-action@v1
         with:
-          tag: ${{ steps.version_build.outputs.v-version }}
-          name: MK8DSB ${{ steps.version_build.outputs.v-version }}
-          body: ${{ inputs.description }}
-          draft: ${{ inputs.is-draft }}
+          GITHUB_TOKEN: ${{ github.token }}
+          name: MK8DSB ${{steps.version.outputs.v-version}}
+          tag: ${{steps.version.outputs.v-version}}
+          body: |
+            ${{inputs.description}}
+
+            ## 🔧 Changelog
+            ${{needs.build.outputs.changelog}}
+
+          draft: ${{inputs.is-draft}}
           prerelease: false
-          artifacts: "*.apk,sha256sum.txt"
+          artifacts: |
+            ./mk8dsb_${{steps.version.outputs.v-version}}.apk
+            ./sha256sum.txt
